--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.18",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,7 +39,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17"
+    "postcss": "^8.5.6"
   }
 }
